Added things about Arglists and \(...).
git-svn-id: http://svn.pugscode.org/pugs@23204 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -14,7 +14,7 @@ Luke Palmer <luke@luqui.org>
   Date: 8 Mar 2004
   Last Modified: 27 Oct 2005
   Number: 3
-  Version: 6
+  Version: 7
 
 =head1 Operator renaming
 
@@ -57,6 +57,10 @@ written: C<<< << ... >> >>>.
 
 =item * The scalar comma C<,> now constructs a list reference of its
 operands.  You have to use a C<[-1]> subscript to get the last one.
+
+=item * The backslash operator still produces a reference, but when
+applied to a parenthesized list, produces an Arglist object instead
+of a list of refs.
 
 =back
 
@@ -245,12 +249,13 @@ true in the above example.
 
 =head1 List flattening
 
-Since typeglobs are being removed, unary C<*> may now serve as a lazy list
-flattening operator.  It is used to "flatten" an array into a list,
-usually to allow the array's contents to be used as the arguments of a
-subroutine call.  Note that those arguments still must comply with the
-subroutine's signature, but the presence of C<*> defers that test until
-run time for that argument (and for any subsequent arguments):
+Since typeglobs are being removed, unary C<*> may now serve as a
+lazy list flattening operator.  It is used to "flatten" an Array
+(or Arglist) into the Arglist being constructed for the current call,
+usually to allow the array's contents to be used as the arguments of
+a subroutine call.  Note that those arguments still must comply with
+the subroutine's signature, but the presence of C<*> defers that test
+until run time for that argument (and for any subsequent arguments):
 
     my @args = (\@foo, @bar);
     push *@args;
@@ -258,6 +263,11 @@ run time for that argument (and for any subsequent arguments):
 is equivalent to:
 
     push @foo, @bar;
+
+as is this:
+
+    my $args = \(@foo, @bar);	 # construct Arglist object
+    push *$args;
 
 In list context, a scalar reference to an array does not flatten.  Hence
 
