Fixed dup .+ in precedence table.
git-svn-id: http://svn.pugscode.org/pugs@23205 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -377,7 +377,7 @@ operator:
 Perl 6 has 22 precedence levels (fewer than Perl 5):
 
     terms		42 "eek" $x /abc/ (1+2) a(1) :by(2) .meth listop
-    method postfix	. .+ .? .* .+ .() .[] .{} .«» .=
+    method postfix	. .+ .? .* .() .[] .{} .«» .=
     autoincrement	++ --
     exponentiation	**
     symbolic unary	! + - ~ ? * ** +^ ~^ ?^ \
