--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -74,7 +74,7 @@ You can declare a sub without parameter list, as in Perl 5:
 Arguments implicitly come in via the C<@_> array, but they are C<readonly>
 aliases to actual arguments:
 
-    sub say { print qq{"@_"\n}; }   # args appear in @_
+    sub say { print qq{"@_[]"\n}; }   # args appear in @_
 
     sub cap { $_ = uc $_ for @_ }   # Error: elements of @_ are constant
 
